Support STAC spec filter extension (#1035)
* Add radio group component

* Add Command and Dialog

* playing

* css

* Move to hook

* Compose hooks

* Better names

* Build filter object

* Context refactor

* Added limit; pagination wip

* Move where links are saved

* Remove placeholder section

* Links in context

* Might regret

* pre moving context update to hook

* Remove redundant state

* woooooooooo

* Remove debug logs

* Restore add to map

* working mostly

* Move common stuff to generic hook

* Big ole refactor

* Rename function

* Use ref to build query

* Handle prev and use currentpage in UI

* CSS fix

* Thank god

* Get total pages again

* comments

* disable page numebr links

* pagination works??

* Accept prev and previous

* Move addToMap to context

* handler comment for later

* refactor execute query

* paginatio update

* Remove redundant fetch finally

* Lint

* Pagination stuff

* Clean up

* Some css

* Saving filter state but restore this

* Move inline styles to css

* Use border color for borders

* Still good

* Renaming is fun

* Clean round 1 fin

* Better naming

* Use @ imports and remove unused things

* Better typing for queries

* Derive all state from hook

* I hate time

* Ill never stop renaming

* Move types where they go

* Format datetime for display

* Dont set collection if there is one

* Hide panel until provider selected

* Move spatial/temporal extent to useStacSearch

* Query on filter change

* Better types

* Move inline styles to css classes

* oh boy

* Much css tweaking

* Combobox select thing

* Well yea it all just looks like shadcn now woops

* Grid queryable rows

* CSS 4eva

* Move components around

* Lint

* Pagination fix

* Lint

* Adjust geodes css

* Update Playwright Snapshots

* Update Playwright Snapshots

* CSS

* More CSS

* You guessed it, more CSS

* Yep

* Add Search prop to Select

* Make collections searchable

* lint

* Update stac test

* Update snapshot

* Update Playwright Snapshot

--- a/packages/base/style/shared/calendar.css
+++ b/packages/base/style/shared/calendar.css
@@ -1,7 +1,7 @@
 .jgis-calendar-container {
   padding: 0.75rem;
   background-color: var(--jp-layout-color2);
-  border: 1px solid var(--jp-accent-color0);
+  border: 1px solid var(--jp-border-color0);
   border-radius: var(--jp-border-radius);
 }
 
@@ -271,4 +271,10 @@
   display: flex;
   height: 2.5rem;
   align-items: center;
+}
+
+/* Unset width and border when popover contains calendar */
+.jgis-popover-content:has(> .jgis-calendar-container) {
+  width: unset;
+  border: unset;
 }
