--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -97,7 +97,7 @@ button.jp-mod-styled.jp-mod-reject {
 
 .jgis-right-panel-container {
   width: 330px;
-  top: 45px;
+  top: 30px;
   right: 0px;
   position: absolute;
   margin: 5px;
@@ -107,7 +107,7 @@ button.jp-mod-styled.jp-mod-reject {
 .jgis-left-panel-container {
   position: absolute;
   width: 275px;
-  top: 45px;
+  top: 30px;
   left: 0px;
   margin: 5px;
   z-index: 40;
@@ -131,4 +131,11 @@ button.jp-mod-styled.jp-mod-reject {
     position: relative;
     margin: 0;
   }
+}
+
+.ol-zoom {
+  top: auto;
+  left: auto;
+  right: 5px;
+  bottom: 5px;
 }
