--- a/packages/base/style/storyPanel.css
+++ b/packages/base/style/storyPanel.css
@@ -145,16 +145,16 @@
   overflow: auto;
   background: linear-gradient(
     to left,
-    var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 49%,
+    var(--jgis-specta-bg-color, --jp-layout-color0) 49%,
     color-mix(
         in srgb,
-        var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 60%,
+        var(--jgis-specta-bg-color, --jp-layout-color0) 60%,
         transparent
       )
       65%,
     color-mix(
         in srgb,
-        var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 50%,
+        var(--jgis-specta-bg-color, --jp-layout-color0) 50%,
         transparent
       )
       70%,
