--- a/packages/base/style/storyPanel.css
+++ b/packages/base/style/storyPanel.css
@@ -175,7 +175,7 @@
   .jp-FormGroup-content
   fieldset
   .jp-inputFieldWrapper
-  > input#presentationBgColor,
+  > input#root_presentationBgColor,
 .jGIS-property-panel
   .jp-FormGroup-content
   fieldset
