Move the shadow

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -104,6 +104,9 @@ button.jp-mod-styled.jp-mod-reject {
   max-height: calc(100% - 0.5rem);
   overflow-y: auto;
   border-radius: 8px;
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .jgis-right-panel-container {
