--- a/packages/base/style/shared/sheet.css
+++ b/packages/base/style/shared/sheet.css
@@ -115,7 +115,9 @@
   background-color: var(--jp-layout-color0);
   color: var(--jp-ui-font-color0);
   border-color: var(--jp-border-color0);
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow:
+    0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   background-clip: padding-box;
@@ -133,11 +135,15 @@
 }
 
 .jgis-sheet-content[data-side='right'][data-state='open'] {
-  animation: sheet-fade-in 0.2s ease-out, sheet-slide-in-right 0.2s ease-out;
+  animation:
+    sheet-fade-in 0.2s ease-out,
+    sheet-slide-in-right 0.2s ease-out;
 }
 
 .jgis-sheet-content[data-side='right'][data-state='closed'] {
-  animation: sheet-fade-out 0.2s ease-in, sheet-slide-out-right 0.2s ease-in;
+  animation:
+    sheet-fade-out 0.2s ease-in,
+    sheet-slide-out-right 0.2s ease-in;
 }
 
 @media (min-width: 640px) {
@@ -158,11 +164,15 @@
 }
 
 .jgis-sheet-content[data-side='left'][data-state='open'] {
-  animation: sheet-fade-in 0.2s ease-out, sheet-slide-in-left 0.2s ease-out;
+  animation:
+    sheet-fade-in 0.2s ease-out,
+    sheet-slide-in-left 0.2s ease-out;
 }
 
 .jgis-sheet-content[data-side='left'][data-state='closed'] {
-  animation: sheet-fade-out 0.2s ease-in, sheet-slide-out-left 0.2s ease-in;
+  animation:
+    sheet-fade-out 0.2s ease-in,
+    sheet-slide-out-left 0.2s ease-in;
 }
 
 @media (min-width: 640px) {
@@ -182,11 +192,15 @@
 }
 
 .jgis-sheet-content[data-side='top'][data-state='open'] {
-  animation: sheet-fade-in 0.2s ease-out, sheet-slide-in-top 0.2s ease-out;
+  animation:
+    sheet-fade-in 0.2s ease-out,
+    sheet-slide-in-top 0.2s ease-out;
 }
 
 .jgis-sheet-content[data-side='top'][data-state='closed'] {
-  animation: sheet-fade-out 0.2s ease-in, sheet-slide-out-top 0.2s ease-in;
+  animation:
+    sheet-fade-out 0.2s ease-in,
+    sheet-slide-out-top 0.2s ease-in;
 }
 
 /* Bottom */
@@ -200,11 +214,15 @@
 }
 
 .jgis-sheet-content[data-side='bottom'][data-state='open'] {
-  animation: sheet-fade-in 0.2s ease-out, sheet-slide-in-bottom 0.2s ease-out;
+  animation:
+    sheet-fade-in 0.2s ease-out,
+    sheet-slide-in-bottom 0.2s ease-out;
 }
 
 .jgis-sheet-content[data-side='bottom'][data-state='closed'] {
-  animation: sheet-fade-out 0.2s ease-in, sheet-slide-out-bottom 0.2s ease-in;
+  animation:
+    sheet-fade-out 0.2s ease-in,
+    sheet-slide-out-bottom 0.2s ease-in;
 }
 
 .jgis-sheet-close {
