Story map fixes (#1094)
* Switch to new segment when adding

* Use theme colors by default

* Notify command when segments populate

* Get back intellisense for commands

* Lint

* Typo

* Move CSS var extraction and remove unused dependency

* Lint?

* <_<

* >_>

* Fix overflow scroll on object properties panel

* Switch to story panel when entering presentation mode

* Move the shadow

* Update Playwright Snapshots

* Update Playwright Snapshots

* Fix Specta css

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -95,20 +95,28 @@ button.jp-mod-styled.jp-mod-reject {
   border-width: 0;
 }
 
+/* Height constrained to 0.5rem less than .jGIS-Mainview-Container */
+.jgis-right-panel-container,
+.jgis-left-panel-container {
+  position: absolute;
+  margin: 0.25rem;
+  z-index: 40;
+  max-height: calc(100% - 0.5rem);
+  overflow-y: auto;
+  border-radius: 8px;
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .jgis-right-panel-container {
   width: 330px;
-  right: 0px;
-  position: absolute;
-  margin: 5px;
-  z-index: 40;
+  right: 0;
 }
 
 .jgis-left-panel-container {
-  position: absolute;
   width: 250px;
-  left: 0px;
-  margin: 5px;
-  z-index: 40;
+  left: 0;
 }
 
 .jgis-icon-adjust {
