--- a/packages/base/style/shared/tabs.css
+++ b/packages/base/style/shared/tabs.css
@@ -5,6 +5,7 @@
   align-items: center;
   background-color: var(--jp-layout-color0);
 }
+
 .jgis-tabs-list {
   display: inline-flex;
   height: 2.5rem;
@@ -12,10 +13,15 @@
   justify-content: space-evenly;
   background-color: var(--jp-layout-color2);
   color: var(--jp-ui-font-color0);
+  cursor: grab;
   gap: 1rem;
   width: 100%;
   font-size: 9px;
   overflow-x: scroll;
+}
+
+.jgis-tabs-list:active {
+  cursor: grabbing;
 }
 
 .jgis-tabs-trigger {
