--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -10,6 +10,7 @@
 @import url('./filterPanel.css');
 @import url('./symbologyDialog.css');
 @import url('./statusBar.css');
+@import url('./spectaProgressBar.css');
 @import url('./temporalSlider.css');
 @import url('./tabPanel.css');
 @import url('./stacBrowser.css');
