--- a/packages/base/style/spectaProgressBar.css
+++ b/packages/base/style/spectaProgressBar.css
@@ -5,7 +5,11 @@
   --jgis-specta-orange: var(--jp-accent-color0);
 
   /* connecting bar */
-  --jgis-specta-orange-light: color-mix(in srgb, var(--jp-accent-color1) 80%, transparent);
+  --jgis-specta-orange-light: color-mix(
+    in srgb,
+    var(--jp-accent-color1) 80%,
+    transparent
+  );
 
   /* inside of radio */
   --jgis-specta-yellow: var(--jp-accent-color3);
@@ -59,7 +63,8 @@
 .jgis-specta-progress .bar-view::after {
   height: 0.25rem;
   top: calc(50% - 0.125rem);
-  transition: transform 0.06s var(--jgis-specta-smooth);
+  transition: transform var(--jgis-specta-transition-duration, 0.06s)
+    var(--jgis-specta-smooth);
   transform: scaleX(0);
   background: var(--jgis-specta-orange-light);
   transform-origin: left;
@@ -82,54 +87,19 @@
   background: var(--jgis-specta-blue);
 }
 
-.jgis-specta-progress .bar-view:not(:last-child):nth-child(2)::after {
+/* No delay: progress bar fill starts as soon as segment index changes (runs in parallel with segment animation) */
+.jgis-specta-progress .bar-view:not(:last-child)::after {
   transition-delay: 0s;
 }
 
-.jgis-specta-progress
-  .bar-view:not(:last-child):nth-child(2)
+/* Button fill: delayed when going next (bar first, then dots), immediate when going prev */
+.jgis-specta-progress .bar-view:not(:last-child) .bar-button::before {
+  transition-delay: 0s;
+}
+.jgis-specta-progress[data-direction='next']
+  .bar-view:not(:last-child)
   .bar-button::before {
-  transition-delay: 0.06s;
-}
-
-.jgis-specta-progress .bar-view:not(:last-child):nth-child(4)::after {
-  transition-delay: 0.1s;
-}
-
-.jgis-specta-progress
-  .bar-view:not(:last-child):nth-child(4)
-  .bar-button::before {
-  transition-delay: 0.16s;
-}
-
-.jgis-specta-progress .bar-view:not(:last-child):nth-child(6)::after {
-  transition-delay: 0.2s;
-}
-
-.jgis-specta-progress
-  .bar-view:not(:last-child):nth-child(6)
-  .bar-button::before {
-  transition-delay: 0.26s;
-}
-
-.jgis-specta-progress .bar-view:not(:last-child):nth-child(8)::after {
-  transition-delay: 0.3s;
-}
-
-.jgis-specta-progress
-  .bar-view:not(:last-child):nth-child(8)
-  .bar-button::before {
-  transition-delay: 0.36s;
-}
-
-.jgis-specta-progress .bar-view:not(:last-child):nth-child(10)::after {
-  transition-delay: 0.4s;
-}
-
-.jgis-specta-progress
-  .bar-view:not(:last-child):nth-child(10)
-  .bar-button::before {
-  transition-delay: 0.46s;
+  transition-delay: var(--jgis-specta-transition-duration, 0.3s);
 }
 
 .jgis-specta-progress .bar-button {
