--- a/packages/base/style/spectaProgressBar.css
+++ b/packages/base/style/spectaProgressBar.css
@@ -24,9 +24,9 @@
   display: flex;
   flex-direction: row-reverse;
   margin: auto auto 0;
-  width: 500px;
+  width: 31.25rem;
   max-width: 40%;
-  /* max-width: calc(100% - 30px); */
+  /* max-width: calc(100% - 1.875rem); */
 }
 
 .jgis-specta-progress .bar-input {
@@ -74,11 +74,9 @@
 .jgis-specta-progress .bar-view:not(:last-child)::before,
 .jgis-specta-progress .bar-view:not(:last-child)::after {
   content: '';
-  width: calc(100% - 24px);
-  /* width: calc(100% - 1.5rem); */
+  width: calc(100% - 1.5rem);
   position: absolute;
-  /* right: calc(50% + 0.75rem); */
-  right: calc(50% + 12px);
+  right: calc(50% + 0.75rem);
 }
 
 .jgis-specta-progress .bar-view:not(:last-child)::before {
@@ -104,8 +102,8 @@
 
 .jgis-specta-progress .bar-button {
   display: block;
-  width: 30px;
-  height: 30px;
+  width: 1.875rem;
+  height: 1.875rem;
   margin: auto;
   border-radius: 50%;
   border: 3px solid var(--jgis-specta-blue);
@@ -149,9 +147,9 @@
 /* .jgis-specta-progress .bar-button::after {
   border: 8px solid transparent;
   border-top-color: var(--jgis-specta-blue-light);
-  bottom: calc(100% + 10px);
-  left: calc(50% - 8px);
-  transform: translateY(-10px);
+  bottom: calc(100% + 0.625rem);
+  left: calc(50% - 0.5rem);
+  transform: translateY(-0.625rem);
   opacity: 0;
   transition:
     transform 0.2s var(--jgis-specta-bounce),
@@ -160,8 +158,8 @@
 
 .jgis-specta-progress-command {
   font-family: 'Ubuntu Mono', monospace;
-  letter-spacing: 1px;
-  margin: 30px auto auto;
+  letter-spacing: 0.0625rem;
+  margin: 1.875rem auto auto;
   animation: jgis-specta-fade 1s ease infinite;
 }
 
@@ -185,7 +183,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(5px);
+    transform: translateY(0.3125rem);
   }
 }
 
