Presentation progress bar (#1136)
* wip

* It goes in the correct direction now

* Tweaking

* Alright thats enough

* Use rem

* Clean a lil

* Make clicking change segments

* Use buttons

* OKAY its clean

* Keep buttons on top

* Lint

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -10,6 +10,7 @@
 @import url('./filterPanel.css');
 @import url('./symbologyDialog.css');
 @import url('./statusBar.css');
+@import url('./spectaProgressBar.css');
 @import url('./temporalSlider.css');
 @import url('./tabPanel.css');
 @import url('./stacBrowser.css');
@@ -141,7 +142,7 @@ button.jp-mod-styled.jp-mod-reject {
   gap: 0.5rem;
   position: absolute;
   bottom: 0.125rem;
-  z-index: 1000;
+  z-index: 1;
   padding: 0 0.125rem;
 }
 
